--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,8 @@
   font-family: 'Rakkas', cursive;
   letter-spacing: 2px;
   border-radius: 20px;
+  border-width: 5px;
+  border-style: double;
 }
 .CustomInput{
   margin-left: -5px;
@@ -176,7 +178,35 @@ letter-spacing: 1px;
   width:60vw;
   overflow: scroll;
   overflow-x: hidden;
+  border-width: 5px;
+  border-style: double;
 }
+.QueryResultDiv{
+  border-style: solid;
+  padding:10px;
+  margin: 20px;
+}
+.IRSMDiv{
+  display: inline-flex;
+  width:100%;
+
+}
+.Rating{
+  position: relative;
+  margin-top: 25px;
+  margin-left: 25vw;
+}
+.QueryButton{
+position: relative;
+margin-left: 10vw;
+}
+.fa-star{
+  border-style: solid;
+}
+.checked{
+  color: orange;
+}
+
  h1{
      font-family: 'Rakkas', cursive;
 }
